<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="?attr/actionBarSize">

    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edittext_registration"
        android:ems="10"
        android:hint="@string/email_hint_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegister" />

    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edittext_registration"
        android:ems="10"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister" />

    <EditText
        android:id="@+id/usernameEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edittext_registration"
        android:ems="10"
        android:hint="@string/username_hint_registration"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleRegisterActivityTextView" />

    <TextView
        android:id="@+id/alreadyHaveAccountRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/already_account_link"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <android.widget.Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister" />

    <ImageView
        android:id="@+id/LogoRegisterActivityImageView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo_impact" />

    <TextView
        android:id="@+id/subtitleRegisterActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What your city has to offer"
        android:textColor="@color/dark_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoRegisterActivityImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>