<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewEditProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectPhotoEditProfile"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectPhotoEditProfile"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectPhotoEditProfile"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectPhotoEditProfile" />

    <android.widget.Button
        android:id="@+id/buttonSelectPhotoEditProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_select_photo_button"
        android:text="@string/select_photo_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectPhotoEditProfile">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/usernameTextViewEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|start"
                android:layout_marginRight="25dp"
                android:text="@string/username_text_profile"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/usernameEditTextEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center|start"
                android:ems="10"
                android:hint="@string/username_hint_registration"
                android:inputType="textPersonName"
                android:textColor="@color/black" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/emailTextViewEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|start"
                android:layout_marginRight="25dp"
                android:text="@string/email_hint_registration"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailEditTextEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center|start"
                android:ems="10"
                android:hint="@string/email_hint_registration"
                android:inputType="textPersonName|textEmailAddress"
                android:textColor="@color/black" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/bioTextViewEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|start"
                android:layout_marginRight="25dp"
                android:text="@string/bio_textView_profile_fragment"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/bioEditTextEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center|start"
                android:ems="10"
                android:hint="@string/bio_hint_editprofile"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressCircleEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/buttonUpdateProfile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>