<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/email_hint_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleLoginActivityTextView" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLogin" />

    <android.widget.Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLogin" />

    <TextView
        android:id="@+id/backToRegistrationLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/back_registration"
        android:textColor="@color/dark_brown"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/logoLoginActivityImageView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_logo_impact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleLoginActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What your city has to offer"
        android:textColor="@color/dark_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLoginActivityImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>